@@ -1,4 +1,12 @@
 2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* support/scripts/cinc2h.pl,
+	  support/scripts/mcs51-disasm.pl,
+	  support/scripts/optimize_pic16devices.pl,
+	  support/scripts/pic14-header-parser.pl,
+	  support/scripts/pic16-header-parser.pl:
+	  Updated the copyright date.
+
+2014-04-16 Molnar Karoly <molnarkaroly AT users.sf.net>
 	* device/include/pic14/pic14devices.txt,
 	  device/include/pic14/pic16regs.h,
 	  device/non-free/include/pic14/pic12f1571.h,
